# tvbingefriend-show-service

./: .funcignore  .gitignore  .pre-commit-config.yaml  README.md  env.py  function_app.py  host.json  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build-deploy.yml  promote-to-production.yml  terraform.yml
alembic/: env.py
alembic/versions/: 3777d1089697_initial_schema.py  d507649d3bde_initial_schema.py  d560e5935f26_initial_schema.py
terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  tfplan  variables.tf
terraform/scripts/: get_tf_vars.py
tests/: test_config.py  test_database.py  test_utils.py
tests/blueprints/: test_bp_get_show_summaries.py  test_bp_get_shows_bulk.py
tests/repos/: test_show_repo.py
tests/services/: test_monitoring_service.py  test_retry_service.py  test_show_service.py
tvbingefriend_show_service/: config.py  database.py  utils.py
tvbingefriend_show_service/blueprints/: __init__.py  bp_get_details.py  bp_get_index_page.py  bp_get_show_by_id.py  bp_get_show_summaries.py  bp_get_shows_bulk.py  bp_health_monitoring.py  bp_queue_for_upsert.py  bp_search_shows.py  bp_start_get_all.py  bp_updates_manual.py  bp_updates_timer.py  bp_upsert.py
tvbingefriend_show_service/models/: base.py  show.py
tvbingefriend_show_service/repos/: show_repo.py
tvbingefriend_show_service/services/: monitoring_service.py  retry_service.py  show_service.py
